# python-module-jk-prettyprintobj

./: .gitignore  HISTORY.md  README.md  packageinfo.jsonc
examples/: example_tokenization.py  examples.py  get-ip-addresses.py  test_async_runner.py  test_chmod.py  test_observable_event.py  test_rng_LinearCongruentialGenerator.py  test_rng_URandomGenerator.py  test_state_manager.py  test_table.py  test_time_limited_cache.py  test_weak_ref_observable_event.py
src/: README.md  pyproject.toml  setup.py
src/jk_prettyprintobj/: DumperSettings.py  NamedTupleDumpMixinMeta.py  RawValue.py  _Bits.py  _ByteChunker.py  _ConverterFunctions.py  _Hex.py  __init__.py  dumper.py
testing/: test_dump_mixin.py  test_dump_pprint.py  test_matrix_class.py  test_named_tuple.py
